--- a/style.css
+++ b/style.css
@@ -20,12 +20,37 @@ form {
   border: 10px solid #086889a8;
   box-shadow: 0px 5px 10px 0px rgba(0, 255, 255, 0.7);
 }
+form h1 {
+  text-align: center;
+}
 
 form:hover {
   transform: translateY(-5px);
   box-shadow: 0px 10px 20px 2px rgba(0, 255, 255, 0.7);
 }
-label, input, button {
-    display: block;
-    margin-bottom: 10px;
+
+input,
+button {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.first-and-last-name,
+.email-phone-number,
+.password-confirm-password {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.button-and-paragraph {
+  display: flex;
+}
+
+button {
+  background-color: #086889a8;
+  color: white;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
 }
