--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 form {
   width: 600px;
+  padding: 4rem;
   background-color: rgba(255, 255, 255, 0.7);
   transition: all ease 0.2s;
   border-radius: 15px;
@@ -31,8 +32,9 @@ form:hover {
 
 input,
 button {
+  padding: 0.4rem;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .first-and-last-name,
@@ -40,10 +42,13 @@ button {
 .password-confirm-password {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
+
 .button-and-paragraph {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 button {
