--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ form {
 }
 form h1 {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 form:hover {
@@ -49,6 +50,11 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 2rem;
+}
+
+.button-and-paragraph p {
+  margin-top: 0.3rem;
 }
 
 button {
