--- a/style.css
+++ b/style.css
@@ -13,14 +13,27 @@ body {
   height: 100vh;
 }
 form {
+  position: relative;
   width: 600px;
   padding: 4rem;
-  background-color: rgba(255, 255, 255, 0.7);
+  background: url("./assets/logo-image.png") center/contain no-repeat;
   transition: all ease 0.2s;
   border-radius: 15px;
   border: 10px solid #086889a8;
   box-shadow: 0px 5px 10px 0px rgba(0, 255, 255, 0.7);
 }
+
+form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: -1;
+}
+
 form h1 {
   text-align: center;
   margin-bottom: 2rem;
